cabal-version:       >= 1.10
name:                vaultaire-query
version:             0.4.5.0
synopsis:            Query library for Vaultaire
license:             BSD3
author:              Anchor Engineering <engineering@anchor.com.au>
maintainer:          Anchor Engineering <engineering@anchor.com.au>
copyright:           © 2013-2014 Anchor Systems, Pty Ltd and Others
category:            Other
tested-with:         GHC == 7.8.3
stability:           experimental

build-type:          Custom

source-repository    head
  type:              git
  location:          git@github.com:anchor/vaultaire-query.git

library
  hs-source-dirs:    lib
  default-language:  Haskell2010

  exposed-modules:   Vaultaire.Query

  other-modules:     Vaultaire.Query.Base,
                     Vaultaire.Query.Connection,
                     Vaultaire.Query.Combinators

  build-depends:     base >=4.7 && <4.8,
                     containers >=0.5 && <0.6,
                     mtl,
                     transformers,
                     either,
                     errors,
                     mmorph,
                     lens,
                     pipes,
                     pipes-safe,
                     pipes-parse,
                     text,
                     network < 2.6,
                     zeromq4-haskell,
                     vaultaire-common,
                     vaultaire-control,
                     marquise,
                     chevalier-common

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs
                     -with-rtsopts=-T

  ghc-prof-options:  -fprof-auto

executable query
  hs-source-dirs:    src
  main-is:           Query.hs
  default-language:  Haskell2010

  build-depends:     base >=3 && <5,
                     mtl,
                     optparse-applicative >= 0.11,
                     bytestring,
                     network < 2.6,
                     cassava,
                     vector,
                     either,
                     parsec,
                     pipes,
                     pipes-bytestring,
                     pipes-csv,
                     pipes-safe,
                     vaultaire-common,
                     marquise,
                     vaultaire-query

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -fprof-auto

test-suite           query-tests
  hs-source-dirs:    tests
  main-is:           Query.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  build-depends:     base >=3 && <5,
                     containers >=0.5 && <0.6,
                     mtl,
                     pipes,
                     time,
                     ieee754,
                     hspec,
                     QuickCheck,
                     vaultaire-common,
                     marquise,
                     vaultaire-query

  ghc-options:       -threaded
  ghc-prof-options:  -auto-all
