cabal-version:       >= 1.10
name:                vaultaire-query
version:             0.5.0.0
synopsis:            Query library for Vaultaire
license:             BSD3
author:              Anchor Engineering <engineering@anchor.com.au>
maintainer:          Anchor Engineering <engineering@anchor.com.au>
copyright:           © 2013-2014 Anchor Systems, Pty Ltd and Others
category:            Other
tested-with:         GHC == 7.8.3
stability:           experimental

build-type:          Custom

flag network-uri
   description: Get Network.URI from the network-uri package
   default: True

source-repository    head
  type:              git
  location:          git@github.com:anchor/vaultaire-query.git

library
  hs-source-dirs:    lib
  default-language:  Haskell2010

  exposed-modules:   Vaultaire.Query

  other-modules:     Vaultaire.Query.Base,
                     Vaultaire.Query.Connection,
                     Vaultaire.Query.Combinators

  if flag(network-uri)
     build-depends: network-uri >= 2.6, network >= 2.6
  else
     build-depends: network-uri < 2.6, network < 2.6
  build-depends:     base >=4.7 && <4.8,
                     containers >=0.5 && <0.6,
                     mtl >= 2.1,
                     transformers,
                     hslogger,
                     either,
                     errors,
                     mmorph,
                     lens,
                     pipes,
                     pipes-safe,
                     pipes-parse,
                     text,
                     zeromq4-haskell >= 0.6.3,
                     data-binary-ieee754,
                     vaultaire-common,
                     vaultaire-control,
                     marquise >= 3.2.1,
                     chevalier-common

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs
                     -with-rtsopts=-T

  ghc-prof-options:  -fprof-auto

executable query
  hs-source-dirs:    src
  main-is:           Query.hs
  default-language:  Haskell2010

  if flag(network-uri)
     build-depends: network-uri >= 2.6, network >= 2.6
  else
     build-depends: network-uri < 2.6, network < 2.6
  build-depends:     base >=3 && <5,
                     mtl >= 2.1,
                     optparse-applicative,
                     bytestring,
                     directory,
                     filepath,
                     cassava,
                     vector,
                     either,
                     parsec,
                     pipes,
                     pipes-bytestring,
                     pipes-csv,
                     pipes-safe,
                     hslogger,
                     data-binary-ieee754,
                     vaultaire-common,
                     chevalier-common,
                     marquise >= 3.1.0,
                     vaultaire-query

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -fprof-auto

test-suite           query-tests
  hs-source-dirs:    tests
  main-is:           Query.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  build-depends:     base >=3 && <5,
                     containers >=0.5 && <0.6,
                     mtl >= 2.1,
                     pipes,
                     time,
                     ieee754,
                     hspec,
                     QuickCheck,
                     vaultaire-common,
                     marquise >= 3.1.0,
                     vaultaire-query

  ghc-options:       -threaded
  ghc-prof-options:  -auto-all
